# text_preprocessor

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  text_preprocessor.rst
tests/: test_text_preprocessor.py
text_preprocessor/: text_preprocessor.py
