[tool.poetry]
name = "text_preprocessor"
version = "0.1.0"
description = "A package to preprocess text data"
authors = ["Varada <kvarada@cs.ubc.ca>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
