[tool.poetry]
name = "text_preprocessor"
version = "0.1.0"
description = "A package to preprocess text data"
authors = ["Varada <kvarada@cs.ubc.ca>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
numpy = "^1.18.1"
sklearn = "^0.0"
v = "^0.0.0"
nltk = "^3.4.5"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
